syntax = "proto3";

package com.bbrownsound.flink.formats.proto.test.v1;
option java_package = "com.bbrownsound.flink.formats.proto.test.v1";

message RepeatedMessageTest {
  InnerMessageTest d = 4;

  message InnerMessageTest{
    optional int32 a = 1;
    optional int64 b = 2;
  }
}
